# causal-engine

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  PRESENTATION_CHECKLIST.md  README.md  api.py  app.py  comtrade_soybeans_v2.csv  entrypoint.sh  fly.toml  pyproject.toml  vercel.json
Knowledge Graphs/: README.md
causal_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dag_registry/: discovered_graphite_causal_structure.json
data/: TradeData_4_17_2026_11_54_35.csv  download_log.json  knowledge_graph.json  sensitivity_grid.json
deploy/: DEPLOY.md  causal-engine.service  nginx.conf  rsync_data.sh  setup_vm.sh
docs/: CAUSAL_FRAMEWORK.md  COMTRADE.md  COMTRADE_API_SHARE.md  HIPPORAG.md  IMPLEMENTATION_FLOW.md  KG_TO_CAUSAL.md  README_pomdp.md  VLLM.md
frontend/: .env.local.example  next.config.mjs  package.json  vercel.json
scenarios/: china_bans_all_graphite.yaml  china_graphite_ban_2027.yaml  china_graphite_cost_increase_3x.yaml  china_graphite_export_ban_2027.yaml  china_restrictions_2021.yaml  graphite_2008_calibrated.yaml  graphite_2008_multishock.yaml  graphite_2023_china_export_controls_substitution.yaml  graphite_2023_no_substitution.yaml  graphite_30pct_export_restriction_2024.yaml  graphite_baseline_2000_2011.yaml  graphite_china_export_restriction_40pct.yaml  graphite_comtrade_calibrated.yaml  graphite_demand_doubles_2026.yaml  graphite_trade_shock_2008.yaml  lithium_2022_ev_boom_with_fringe.yaml  soybeans_2011_food_crisis.yaml  soybeans_2015_supply_glut.yaml  soybeans_2018_trade_war.yaml  soybeans_2020_phase1.yaml  soybeans_2022_ukraine_shock.yaml  soybeans_2025_tariff_escalation.yaml  soybeans_baseline.yaml  (+2 more)
(+493 files in other folders)
