[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-engine"
version = "0.1.0"
description = "A causal modeling engine for effect estimation and policy simulation"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Causal Engine Team"}
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.4",
    "scipy>=1.10.0,<=1.15.3",
    "dowhy>=0.11.0",
    "econml>=0.14.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.7.0",
    "networkx>=3.1",
    "python-dotenv>=1.0.0",
    "anthropic>=0.18.0",
    "pyyaml>=6.0.0",
    "pydot<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
pdf = [
    "pypdf>=3.0.0",
]
rag = [
    "sentence-transformers>=2.2.0",
    "requests>=2.28.0",
    "chromadb>=0.4.0",
    "tqdm>=4.65.0",
]
ui = [
    "gradio>=4.0.0",
]
# Optional; strict deps (e.g. torch==2.5.1) may conflict. If so, install project without [hipporag] and skip.
hipporag = [
    "hipporag>=2.0.0",
]

[project.scripts]
causal-engine = "src.api:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__:DeprecationWarning",
    "ignore::DeprecationWarning:multiprocessing.popen_fork",
]